# CodexCourseCreator

./: .gitignore  AGENTS.md  ATLAS_PROMPT.md  CHATLOG.md  CONTENTS.md  FINAL_PRODUCT.md  IMPROVEMENTS.md  INCREMENTAL_IMPROVEMENTS.md  ORIGINAL_PLAN.plan.md  README.md  ROADMAP.md  SCOPE.md  pyproject.toml  v3-quality-scoring-roadmap_5fbfe851.plan.md
.cursor/rules/: atlas-learning-architect.mdc  kwon-test-architect.mdc  lesson-authoring.mdc  maestro-orchestrator.mdc  marsh-lesson-author.mdc  planning.mdc  shared-target-resolution.mdc  test-authoring.mdc
.github/workflows/: ci.yml
Ch1/: L2.md  L2.py  L3.py
Ch2/: L1.py  L2.md  L3.md
course/: glossary.md  overview.md  progress.example.yaml  progress.schema.json  progress.yaml  spine-and-contents.md  spine.example.yaml  spine.schema.json  spine.yaml
course/guides/test-authoring/: README.md  jest.md  pytest.md  vitest.md
course/reference-module/: CONTENTS.md  README.md  WORKFLOW_EXAMPLE.md  main.py  main_test.py  pytest.ini
course/reference-module/course/: PRESTRUCTURE_ASSESSMENT.md  overview.md  progress.yaml  spine.yaml
course/reference-module/course/Ch1/: ASSESSMENT.md  L1.md  L2.md  L3.md
course/templates/: assessment.md  lesson-hints.md  lesson.md
python/: README.md
python/backend-fundamentals-kanban/: CONTENTS.md  README.md  main.py  main_test.py  pyproject.toml
python/backend-fundamentals-kanban/Ch1/: L1.md  L2.md  L3.md  L4.md
python/backend-fundamentals-kanban/course/: glossary.md  overview.md  progress.yaml  spine.yaml
python/backend-fundamentals-kanban/course/M1/Ch1/: ASSESSMENT.md  L1.md  L2.md  L3.md  L4.md
python/data-structures/: ATLAS_PROMPT.md  CONTENTS.md  PLANNING_PROMPT.md  README.md  main_test.py  pyproject.toml
python/data-structures/Ch1/: L1.md  L1.py  L2.md  L3.md
python/data-structures/Ch2/: L1.md  L2.md  L3-hint.md  L3.md
python/data-structures/Ch3/: L1.md  L2-hint.md  L2.md  L3.md
python/data-structures/Ch4/: L1.md  L2.md  L3-hint.md  L3.md
python/data-structures/Ch5/: L1-hint.md  L1.md  L2.md  L3.md
python/data-structures/Ch6/: L1-hint.md  L1.md  L2.md  L3-hint.md  L3.md
python/data-structures/course/: glossary.md  overview.md  spine.yaml
python/fundamentals/: ATLAS_PROMPT.md  CONTENTS.md  PLANNING_PROMPT.md  README.md  main.py  main_test.py  pyproject.toml
python/fundamentals/Ch1/: L1.md  L1.py  L2.md  L3.md  L4.md
python/fundamentals/Ch2/: L1.md  L2.md  L2.py  L3.md  L3.py  L4.md
python/fundamentals/Ch3/: L1.md  L2.md  L3.md  L4.md
python/fundamentals/Ch4/: L1.md  L2.md  L3.md  L4.md
python/fundamentals/Ch5/: L1.md  L2.md  L3-hint.md  L3.md  L4-hint.md  L4.md
python/fundamentals/Ch6/: L1.md  L2.md  L3-hint.md  L3.md  L4-hint.md  L4.md
python/fundamentals/Ch7/: L1.md  L2.md  L3.md  L4.md
python/fundamentals/Ch8/: L1-hint.md  L1.md  L2-hint.md  L2.md  L3-hint.md  L3.md  L4-hint.md  L4.md
python/fundamentals/course/: glossary.md  overview.md  spine.yaml
python/fundamentals/src/: main.py
python/reference-module/: CONTENTS.md  MAESTRO_RILEY_MARSH_FLOW.md  README.md  WORKFLOW_EXAMPLE.md  main.py  main_test.py  pyproject.toml
python/reference-module/Ch1/: L1.md  L2.md
python/reference-module/course/: overview.md  progress.yaml  spine.yaml
rust/rust-fundamentals/: CONTENTS.md  README.md  RUST_BOOK_EARLY_NOTES.md
rust/rust-fundamentals/course/: notes.md  overview.md  progress.yaml  spine.yaml
rust/rust-fundamentals/course/M1/Ch1/: L1.md  L2.md  L3.md  L4.md  L5.md
rust/rust-fundamentals/course/M1/Ch2/: L0.md
rust/rust-fundamentals/log-summary-cli/src/: main.rs
scripts/: check_test_regression.py  validate_repo.py
src/: corpus.py
