[project]
name = "fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "lesson_ch1_l1: selector for Ch1/L1",
    "lesson_ch1_l2: selector for Ch1/L2",
    "lesson_ch1_l3: selector for Ch1/L3",
    "lesson_ch1_l4: selector for Ch1/L4",
    "lesson_ch2_l1: selector for Ch2/L1",
    "lesson_ch2_l2: selector for Ch2/L2",
    "lesson_ch2_l3: selector for Ch2/L3",
    "lesson_ch2_l4: selector for Ch2/L4",
    "lesson_ch3_l1: selector for Ch3/L1",
    "lesson_ch3_l2: selector for Ch3/L2",
    "lesson_ch3_l3: selector for Ch3/L3",
    "lesson_ch3_l4: selector for Ch3/L4",
    "lesson_ch4_l1: selector for Ch4/L1",
    "lesson_ch4_l2: selector for Ch4/L2",
    "lesson_ch4_l3: selector for Ch4/L3",
    "lesson_ch4_l4: selector for Ch4/L4",
    "lesson_ch5_l1: selector for Ch5/L1",
    "lesson_ch5_l2: selector for Ch5/L2",
    "lesson_ch5_l3: selector for Ch5/L3",
    "lesson_ch5_l4: selector for Ch5/L4",
    "lesson_ch6_l1: selector for Ch6/L1",
    "lesson_ch6_l2: selector for Ch6/L2",
    "lesson_ch6_l3: selector for Ch6/L3",
    "lesson_ch6_l4: selector for Ch6/L4",
    "lesson_ch7_l1: selector for Ch7/L1",
    "lesson_ch7_l2: selector for Ch7/L2",
    "lesson_ch7_l3: selector for Ch7/L3",
    "lesson_ch7_l4: selector for Ch7/L4",
    "lesson_ch8_l1: selector for Ch8/L1",
    "lesson_ch8_l2: selector for Ch8/L2",
    "lesson_ch8_l3: selector for Ch8/L3",
    "lesson_ch8_l4: selector for Ch8/L4",
]
